<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AssignTagActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/assign_tag_textview_description"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assign_tag_textview_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/untracked_expenses_item_textview_date"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/untracked_expenses_item_textview_sms_body"
        android:textColor="@color/white"
        android:id="@+id/assign_tag_textview_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/assign_tag_textview_date" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/assign_tag_linear_layout_amount"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assign_tag_textview_description" >

        <TextView
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:text="Amount: "
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            />

        <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:autofillHints=""
            android:layout_weight="1"
            android:layout_marginTop="25sp"
            android:id="@+id/assign_tag_edittext_transaction_amount"
            android:textColor="@color/white"
            android:textColorHint="#A1A1A1"
            android:hint="Rs. 20,000"
            android:textSize="18sp"
            android:inputType="numberDecimal"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/assign_tag_edittext_transaction_explanation"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/white_border"
        android:hint="@string/assign_tag_edittext_reason_hint"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="#A1A1A1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assign_tag_linear_layout_amount" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/assign_tag_edittext_transaction_explanation"
        android:id="@+id/assign_tag_linear_layout_tag"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Tag:"
            android:textSize="15sp"
            android:layout_margin="10dp"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            android:id="@+id/assign_tag_spinner_tag"
            android:background="@drawable/white_border"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assign_tag_linear_layout_tag"
        android:id="@+id/assign_tag_linear_layout_tag_cc"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Was it your credit card?"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/assign_tag_spinner_credit_card"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/assign_tag_linear_layout_tag_cc"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:id="@+id/assign_tag_button_delete"
            android:background="#D10000"
            android:textColor="@color/white"
            android:text="Delete"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="0dp"
            android:id="@+id/assign_tag_button_add_expense"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/teal_700"
            android:text="Add expense"
            android:layout_margin="5dp"
            android:layout_height="50dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>